got react redux basic setup working
