# swagger.json
@@ -281,7 +281,10 @@
           "200" : {
             "description" : "successful operation",
             "schema" : {
-              "$ref" : "#/definitions/Stack"
+               type: "array",
+               items: {
+                "$ref" : "#/definitions/Stack"
+               }
             }
           },
           "400" : {
